<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">GkQuiz</string>
  <string name="menu_settings">Settings</string>
  <string name="play">Play</string>
  <string name="settings">Settings</string>
  <string name="exit">Exit</string>
  <string name="question">Question</string>
  <string name="choice1">Choice1</string>
  <string name="choice2">Choice2</string>
  <string name="choice3">Choice3</string>
  <string name="choice4">Choice4</string>
  <string name="countdown">CountDown</string>
  <string name="audiancepole">AudiencePoll</string>
  <string name="fiftyfifty">50/50</string>
  <string name="lifeline">LifeLine</string>
  <string name="mute">Mute</string>
  <string name="close">Close</string>
  <string name="Rs1million">15&#160;&#160;&#160;&#160;&#160;&#160;Rs&#160;1 Million</string>
  <string name="Rs500000">14&#160;&#160;&#160;&#160;&#160;&#160;Rs&#160;&#160;500,000</string>
  <string name="Rs250000">13&#160;&#160;&#160;&#160;&#160;&#160;Rs&#160;&#160;250,000</string>
  <string name="Rs125000">12&#160;&#160;&#160;&#160;&#160;&#160;Rs&#160;&#160;125,000</string>
  <string name="Rs64000">11&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Rs&#160;&#160;64,000</string>
  <string name="Rs32000">10&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Rs&#160;&#160;32,000</string>
  <string name="Rs16000">9&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Rs&#160;&#160;16,000</string>
  <string name="Rs8000">8&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Rs&#160;&#160;8,000</string>
  <string name="Rs4000">7&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Rs&#160;&#160;4,000</string>
  <string name="Rs2000">6&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Rs&#160;&#160;2,000</string>
  <string name="Rs1000">5&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Rs&#160;&#160;1,000</string>
  <string name="Rs500">4&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Rs&#160;&#160;500</string>
  <string name="Rs300">3&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Rs&#160;&#160;300"</string>
  <string name="Rs200">2&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Rs&#160;&#160;200</string>
  <string name="Rs100">1&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Rs&#160;&#160;100</string>
</resources>
