<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:background="#041A37"
  android:padding="10dp"
  android:layout_height="match_parent" >
  <TextView
    android:id="@+id/tv_1million"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_marginRight="21dp"
    android:textColor="#FFFFFC"
    android:text="@string/Rs1million"/>
  <TextView
    android:id="@+id/tv_rs500000"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_below="@+id/tv_1million"
    android:layout_marginRight="21dp"
    android:textColor="#EEE12E"
    android:text="@string/Rs500000"/>
  <TextView
    android:id="@+id/tv_rs250000"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_below="@+id/tv_rs500000"
    android:layout_marginRight="21dp"
    android:textColor="#EEE12E"
    android:text="@string/Rs250000"/>
  <TextView
    android:id="@+id/tv_rs125000"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_below="@+id/tv_rs250000"
    android:textColor="#EEE12E"
    android:layout_marginRight="21dp"
    android:text="@string/Rs125000"/>
  <TextView
    android:id="@+id/tv_rs64000"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_below="@+id/tv_rs125000"
    android:layout_marginRight="21dp"
    android:textColor="#EEE12E"
    android:text="@string/Rs64000"/>
  <TextView
    android:id="@+id/tv_rs32000"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignRight="@+id/tv_rs64000"
    android:layout_below="@+id/tv_rs64000"
    android:textColor="#FFFFFC"
    android:text="@string/Rs32000" />
  <TextView
    android:id="@+id/tv_rs16000"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignRight="@+id/tv_rs32000"
    android:layout_below="@+id/tv_rs32000"
    android:textColor="#EEE12E"
    android:text="@string/Rs16000" />
  <TextView
    android:id="@+id/tv_rs8000"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/tv_rs4000"
    android:layout_below="@+id/tv_rs16000"
    android:textColor="#EEE12E"
    android:text="@string/Rs8000" />
  <TextView
    android:id="@+id/tv_rs4000"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/tv_rs16000"
    android:layout_below="@+id/tv_rs8000"
    android:textColor="#EEE12E"
    android:text="@string/Rs4000" />
  <TextView
    android:id="@+id/tv_rs2000"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/tv_rs4000"
    android:layout_below="@+id/tv_rs4000"
    android:textColor="#EEE12E"
    android:text="@string/Rs2000" />
  <TextView
    android:id="@+id/tv_rs1000"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignRight="@+id/tv_rs64000"
    android:layout_below="@+id/tv_rs2000"
    android:textColor="#FFFFFC"
    android:text="@string/Rs1000"/>
  <TextView
    android:id="@+id/tv_rs500"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/tv_rs1000"
    android:layout_below="@+id/tv_rs1000"
    android:textColor="#EEE12E"
    android:text="@string/Rs500"/>
  <TextView
    android:id="@+id/tv_rs300"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/tv_rs500"
    android:layout_below="@+id/tv_rs500"
    android:textColor="#EEE12E"
    android:text="@string/Rs300"/>
  <TextView
    android:id="@+id/tv_rs200"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/tv_rs300"
    android:layout_below="@+id/tv_rs300"
    android:textColor="#EEE12E"
    android:text="@string/Rs200"/>
  <TextView
    android:id="@+id/tv_rs100"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/tv_rs200"
    android:layout_below="@+id/tv_rs200"
    android:textColor="#EEE12E"
    android:text="@string/Rs100"/>
  <TextView
    android:id="@+id/tv_question"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_below="@+id/tv_rs100"
    android:textColor="#FFFFFF"
    android:textAppearance="?android:attr/textAppearanceLarge" />
  <TextView
    android:id="@+id/tv_choice_1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_below="@+id/tv_question"
    android:layout_marginTop="52dp"
    android:textColor="#FFFFFF"
    android:width="125dp"
    android:textAppearance="?android:attr/textAppearanceMedium" />
  <TextView
    android:id="@+id/tv_choice_2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/tv_choice_1"
    android:layout_alignBottom="@+id/tv_choice_1"
    android:layout_alignRight="@+id/tv_rs1000"
    android:textColor="#FFFFFF"
    android:width="125dp"
    android:textAppearance="?android:attr/textAppearanceMedium" />
  <TextView
    android:id="@+id/tv_choice_3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_below="@+id/tv_choice_1"
    android:layout_marginTop="16dp"
    android:textColor="#FFFFFF"
    android:width="125dp"
    android:textAppearance="?android:attr/textAppearanceMedium" />
  <TextView
    android:id="@+id/tv_choice_4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/tv_choice_3"
    android:layout_alignLeft="@+id/tv_choice_2"
    android:textColor="#FFFFFF"
    android:width="125dp"
    android:textAppearance="?android:attr/textAppearanceMedium" />
  <TextView
    android:id="@+id/tv_rs5000005"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/tv_rs500"
    android:layout_alignParentLeft="true"
    android:layout_alignTop="@+id/tv_rs4000"
    android:layout_marginLeft="32dp"
    android:textAppearance="?android:attr/textAppearanceLarge" />
</RelativeLayout>
