<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#041A37"
  android:padding="25dp"
  android:orientation="vertical" >
  <Button
    android:id="@+id/btn_play"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="175dp"
    android:text="@string/play" />
  <Button
    android:id="@+id/btn_settings"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/settings" />
  <Button
    android:id="@+id/btn_exit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/exit" />
</LinearLayout>
